--- a/dim/Cargo.toml
+++ b/dim/Cargo.toml
@@ -17,7 +17,7 @@ sqlite = ["database/sqlite"]
 
 [dependencies]
 # git dependencies
-nightfall = { git = "https://github.com/Dusk-Labs/nightfall", tag = "0.3.12-rc4", default-features = false, features = ["cuda", "ssa_transmux"] }
+nightfall = { git = "https://github.com/Dusk-Labs/nightfall", branch="master", default-features = false, features = ["cuda", "ssa_transmux"] }
 
 # local dependencies
 database = { path = "../database", default-features = false, optional = true }
