--- a/dim/Cargo.toml
+++ b/dim/Cargo.toml
@@ -62,6 +62,8 @@ tracing-tree = "0.2.0"
 thiserror = "1.0.30"
 displaydoc = "0.2.3"
 fuzzy-matcher = "0.3.7"
+parking_lot = "0.12.0"
+dashmap = "5.3.3"
 
 [build-dependencies]
 fs_extra = "1.1.0"
